Fixed jumping identity permission icon in url bar

--- a/Private Mode Style/userChrome.css
+++ b/Private Mode Style/userChrome.css
@@ -277,7 +277,7 @@ LAYOUT
 }
 #identity-permission-box {
     height: 21px !important;
-    padding: 0px 4px 1px 4px !important;
+    padding: 0px 4px 0px 4px !important;
     margin: 0px 0px !important;
 }
 #identity-icon,
